--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -213,12 +213,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112171758
+Cached time: 20260112171827
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.132 seconds
-Real time usage: 0.187 seconds
+CPU time usage: 0.128 seconds
+Real time usage: 0.192 seconds
 Preprocessor visited node count: 709/1000000
 Post&#8208;expand include size: 33491/2097152 bytes
 Template argument size: 12486/2097152 bytes
@@ -229,19 +229,19 @@ Unstrip post&#8208;expand size: 3966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.377      1 -total
- 17.75%   10.182      1 Template:Std_Base_navi/bg
- 14.30%    8.207      3 Template:Navigation_menu_2
- 13.67%    7.843      1 Template:Interface_navi/bg
-  8.09%    4.640      1 Template:Userdocnavi/bg
-  7.75%    4.444      1 Template:PropertyData
-  6.97%    4.000      1 Template:Property/bg
-  5.93%    3.405      2 Template:Docnav
-  5.55%    3.185     26 Template:MenuCommand
-  4.72%    2.711      6 Template:Incode
+100.00%   62.233      1 -total
+ 30.84%   19.194      1 Template:Std_Base_navi/bg
+ 17.66%   10.988      3 Template:Navigation_menu_2
+ 12.27%    7.635      1 Template:Interface_navi/bg
+ 10.08%    6.273      1 Template:Userdocnavi/bg
+  7.26%    4.519      1 Template:PropertyData
+  5.26%    3.272      2 Template:Docnav
+  4.49%    2.793      1 Template:Property/bg
+  4.31%    2.683      1 Template:Code
+  3.95%    2.461      2 Template:Value
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260112171758 and revision id 1708583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260112171827 and revision id 1708583. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
