--- a/wiki/bg/Online_Help_Toc.html
+++ b/wiki/bg/Online_Help_Toc.html
@@ -40,8 +40,8 @@
 <li><a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">&#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a></li>
 <li><a href="../Selection_methods.html" title="Selection methods">Selection methods</a></li>
 <li><a href="../Navigation_Cube.html" title="Navigation Cube">The navigation cube</a></li>
-<li><a href="../Document_structure.html" title="Document structure">The FreeCAD document</a></li>
-<li><a href="../Property_View.html" title="Property View">Property View</a></li></ul></li></ul>
+<li><a href="../bg/Document_structure.html" title="Document structure/bg">&#1057;&#1090;&#1088;&#1091;&#1082;&#1090;&#1091;&#1088;&#1072; &#1085;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1074;&#1098;&#1074; FreeCAD</a></li>
+<li><a href="../bg/Property_View.html" title="Property View/bg">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a></li></ul></li></ul>
 <ul><li>&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; <a href="../Workbenches.html" title="Workbenches">Workbenches</a>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standard tools for all Workbenches</a></li>
 <li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">The Assembly Workbench</a> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>)</li>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112171412
+Cached time: 20260112171921
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.107 seconds
-Real time usage: 0.161 seconds
+CPU time usage: 0.108 seconds
+Real time usage: 0.150 seconds
 Preprocessor visited node count: 94/1000000
 Post&#8208;expand include size: 5936/2097152 bytes
 Template argument size: 1925/2097152 bytes
@@ -151,14 +151,14 @@ Unstrip post&#8208;expand size: 4519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.955      1 -total
- 66.16%    5.925      1 Template:Userdocnavi/bg
- 34.66%    3.104      1 Template:Navigation_menu_2
- 16.56%    1.483      2 Template:Version
- 13.10%    1.173      2 Template:VersionMinus
+100.00%   10.829      1 -total
+ 65.73%    7.118      1 Template:Userdocnavi/bg
+ 24.50%    2.653      1 Template:Navigation_menu_2
+ 17.75%    1.922      2 Template:Version
+ 12.45%    1.348      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112171411 and revision id 1737582. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77173-0!canonical and timestamp 20260112171921 and revision id 1737586. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
