--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -28,11 +28,7 @@
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Introduction"></span>
 </p>
-<div class="mw-translate-fuzzy">
 <h2><span id=".D0.9E.D0.B1.D1.89_.D0.BF.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;_&#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;">&#1054;&#1073;&#1097; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;</span></h2>
-<p>&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1077; &#1077;&#1076;&#1080;&#1085; &#1086;&#1090; &#1085;&#1072;&#1081;-&#1074;&#1072;&#1078;&#1085;&#1080;&#1090;&#1077; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1074; FreeCAD. &#1042; &#1085;&#1077;&#1075;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1103;&#1090;&#1077; &#1074;&#1089;&#1103;&#1082;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; (&#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088; &#1088;&#1072;&#1079;&#1084;&#1077;&#1088;, &#1087;&#1086;&#1079;&#1080;&#1094;&#1080;&#1103;, &#1086;&#1088;&#1080;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103;) &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090; &#1074;&#1098;&#1074; &#1074;&#1072;&#1096;&#1080;&#1103; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;.
-</p>
-</div>
 <p>The <a href="../Property_View.html" title="Property View">Property View</a> appears in the lower section of the <b>Model</b> panel (if the <a href="../Combo_View.html" title="Combo View">Combo View</a> is active) or as a stand-alone panel.
 </p>
 <div class="mw-translate-fuzzy">
@@ -213,13 +209,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112171827
+Cached time: 20260112172019
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.128 seconds
-Real time usage: 0.192 seconds
-Preprocessor visited node count: 709/1000000
+CPU time usage: 0.157 seconds
+Real time usage: 0.243 seconds
+Preprocessor visited node count: 708/1000000
 Post&#8208;expand include size: 33491/2097152 bytes
 Template argument size: 12486/2097152 bytes
 Highest expansion depth: 7/100
@@ -229,19 +225,19 @@ Unstrip post&#8208;expand size: 3966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   62.233      1 -total
- 30.84%   19.194      1 Template:Std_Base_navi/bg
- 17.66%   10.988      3 Template:Navigation_menu_2
- 12.27%    7.635      1 Template:Interface_navi/bg
- 10.08%    6.273      1 Template:Userdocnavi/bg
-  7.26%    4.519      1 Template:PropertyData
-  5.26%    3.272      2 Template:Docnav
-  4.49%    2.793      1 Template:Property/bg
-  4.31%    2.683      1 Template:Code
-  3.95%    2.461      2 Template:Value
+100.00%   69.890      1 -total
+ 16.61%   11.607      1 Template:Std_Base_navi/bg
+ 12.94%    9.041      3 Template:Navigation_menu_2
+ 12.45%    8.700      1 Template:Interface_navi/bg
+ 11.81%    8.257      1 Template:Userdocnavi/bg
+  9.72%    6.795      1 Template:PropertyData
+  7.75%    5.416      2 Template:Value
+  6.29%    4.397     26 Template:MenuCommand
+  5.79%    4.046      2 Template:Docnav
+  4.50%    3.145      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260112171827 and revision id 1708583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260112172018 and revision id 1737588. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
