--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -29,7 +29,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.9E.D0.B1.D1.89_.D0.BF.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;_&#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;">&#1054;&#1073;&#1097; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;</span></h2>
-<p>The <a href="../Property_View.html" title="Property View">Property View</a> appears in the lower section of the <b>Model</b> panel (if the <a href="../Combo_View.html" title="Combo View">Combo View</a> is active) or as a stand-alone panel.
+<p><a class="mw-selflink selflink">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a> &#1089;&#1077; &#1087;&#1086;&#1103;&#1074;&#1103;&#1074;&#1072; &#1074; &#1076;&#1086;&#1083;&#1085;&#1080;&#1103; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083; &#1085;&#1072; &#1087;&#1072;&#1085;&#1077;&#1083;&#1072; "<i>Model'</i> (&#1072;&#1082;&#1086; <a href="../Combo_View.html" title="Combo View">Combo View</a> &#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1077;&#1085;) &#1080;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1089;&#1072;&#1084;&#1086;&#1089;&#1090;&#1086;&#1103;&#1090;&#1077;&#1083;&#1077;&#1085; &#1087;&#1072;&#1085;&#1077;&#1083;.
 </p>
 <div class="mw-translate-fuzzy">
 <p>&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1074;&#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1089;&#1072;&#1084;&#1086; &#1085;&#1072; &#1080;&#1079;&#1073;&#1088;&#1072;&#1085;&#1080;&#1103; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;, &#1074; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; (&#1074;&#1085;&#1080;&#1084;&#1072;&#1074;&#1072;&#1081;&#1090;&#1077; &#1082;&#1086;&#1080; &#1077; &#1074; &#1084;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072; &#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1103; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;, &#1072;&#1082;&#1086; &#1080;&#1084;&#1072;&#1090;&#1077; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072; &#1086;&#1090;&#1074;&#1086;&#1088;&#1077;&#1085;&#1080;). &#1040;&#1082;&#1086; &#1085;&#1077; &#1089;&#1090;&#1077; &#1080;&#1079;&#1073;&#1088;&#1072;&#1083;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090; (&#1080;&#1083;&#1080; &#1085;&#1103;&#1084;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;), &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088;&#1072; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; &#1097;&#1077; &#1077; &#1087;&#1088;&#1072;&#1079;&#1077;&#1085;.
@@ -209,12 +209,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112172019
+Cached time: 20260112172150
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.157 seconds
-Real time usage: 0.243 seconds
+CPU time usage: 0.133 seconds
+Real time usage: 0.190 seconds
 Preprocessor visited node count: 708/1000000
 Post&#8208;expand include size: 33491/2097152 bytes
 Template argument size: 12486/2097152 bytes
@@ -225,19 +225,19 @@ Unstrip post&#8208;expand size: 3966/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   69.890      1 -total
- 16.61%   11.607      1 Template:Std_Base_navi/bg
- 12.94%    9.041      3 Template:Navigation_menu_2
- 12.45%    8.700      1 Template:Interface_navi/bg
- 11.81%    8.257      1 Template:Userdocnavi/bg
-  9.72%    6.795      1 Template:PropertyData
-  7.75%    5.416      2 Template:Value
-  6.29%    4.397     26 Template:MenuCommand
-  5.79%    4.046      2 Template:Docnav
-  4.50%    3.145      1 Template:Variable
+100.00%   42.079      1 -total
+ 21.32%    8.972      1 Template:Std_Base_navi/bg
+ 16.77%    7.055      3 Template:Navigation_menu_2
+ 14.65%    6.164      1 Template:Userdocnavi/bg
+ 12.32%    5.184      1 Template:Interface_navi/bg
+  7.41%    3.117      1 Template:PropertyData
+  5.25%    2.209      1 Template:Property/bg
+  5.03%    2.116      2 Template:Docnav
+  4.64%    1.953     26 Template:MenuCommand
+  4.40%    1.851      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260112172018 and revision id 1737588. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260112172150 and revision id 1737590. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
