--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -58,10 +58,10 @@
 </p>
 <h3><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B0_.D0.A3.D0.BF.D0.BE.D1.82.D1.80.D0.B5.D0.B1.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072;_&#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1072; &#1059;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072;</span></h3>
 <ul><li><a href="../Interface.html" title="Interface">Interface</a>: &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1098;&#1090; &#1085;&#1072; FreeCAD &#1077; &#1089;&#1098;&#1089;&#1090;&#1072;&#1074;&#1077;&#1085; &#1086;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;, &#1074;&#1082;&#1083;&#1102;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>,  <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a>,  <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a>, &#1080; <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>.</li>
-<li><a href="../Mouse_navigation.html" title="Mouse navigation">Mouse navigation</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1074;&#1080;&#1076;&#1086;&#1074;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1080;&#1083;&#1080; &#1090;&#1088;&#1072;&#1082;&#1087;&#1072;&#1076;&#1072; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;.</li>
+<li><a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1074;&#1080;&#1076;&#1086;&#1074;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; &#1080;&#1083;&#1080; &#1090;&#1088;&#1072;&#1082;&#1087;&#1072;&#1076;&#1072; &#1079;&#1072; &#1085;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1074; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;.</li>
 <li><a href="../Selection_methods.html" title="Selection methods">Selection methods</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1086;&#1088; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; &#1089;&#1086;&#1092;&#1090;&#1091;&#1077;&#1088;&#1072;.</li>
 <li><a href="../Object_name.html" title="Object name">Objects naming</a>: FreeCAD &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;&#1090;&#1077; &#1080;&#1084;&#1072;&#1090; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1086; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1095;&#1077;&#1090;&#1077;&#1085;&#1077; <code>Name</code> &#1082;&#1086;&#1080;&#1090;&#1086; &#1077;&#1076;&#1085;&#1086;&#1079;&#1085;&#1072;&#1095;&#1085;&#1086; &#1075;&#1080; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;, &#1080; <code>Label</code>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;.</li>
-<li><a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>: &#1077; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1074;&#1080; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1076;&#1072; &#1082;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083;&#1080;&#1088;&#1072;&#1090;&#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1073;&#1072;&#1079;&#1086;&#1074;&#1072;&#1090;&#1072; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1080; &#1085;&#1072; &#1086;&#1090;&#1076;&#1077;&#1083;&#1085;&#1080;&#1090;&#1077; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;.</li>
+<li><a href="../bg/Preferences_Editor.html" title="Preferences Editor/bg">&#1056;&#1077;&#1076;&#1072;&#1082;&#1090;&#1086;&#1088; &#1085;&#1072; &#1087;&#1088;&#1077;&#1076;&#1087;&#1086;&#1095;&#1080;&#1090;&#1072;&#1085;&#1080;&#1103;&#1090;&#1072;</a>: &#1077; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072;&#1090;&#1072;, &#1082;&#1086;&#1103;&#1090;&#1086; &#1074;&#1080; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; &#1076;&#1072; &#1082;&#1086;&#1085;&#1090;&#1088;&#1086;&#1083;&#1080;&#1088;&#1072;&#1090;&#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1073;&#1072;&#1079;&#1086;&#1074;&#1072;&#1090;&#1072; &#1089;&#1080;&#1089;&#1090;&#1077;&#1084;&#1072; &#1080; &#1085;&#1072; &#1086;&#1090;&#1076;&#1077;&#1083;&#1085;&#1080;&#1090;&#1077; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;.</li>
 <li><a href="../Import_Export.html" title="Import Export">File formats</a>: &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1092;&#1072;&#1081;&#1083;&#1086;&#1074;&#1080; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; FreeCAD &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1095;&#1077;&#1090;&#1077; &#1080; &#1079;&#1072;&#1087;&#1080;&#1089;&#1074;&#1072;.</li></ul>
 <p><span id="Workbenches"></span>
 </p>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112173808
+Cached time: 20260112174956
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.096 seconds
-Real time usage: 0.150 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -151,17 +151,17 @@ Unstrip post&#8208;expand size: 4273/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.295      1 -total
- 36.73%    6.719      1 Template:Userdocnavi/bg
- 18.45%    3.375      3 Template:Version
- 13.96%    2.553      1 Template:Navigation_menu_2
- 12.20%    2.232      1 Template:TOCright
- 10.37%    1.898      1 Template:Button
-  9.87%    1.806      7 Template:Incode
-  7.45%    1.363      2 Template:VersionMinus
+100.00%   18.060      1 -total
+ 38.93%    7.030      1 Template:Userdocnavi/bg
+ 15.59%    2.816      3 Template:Version
+ 12.50%    2.258      1 Template:Navigation_menu_2
+ 11.51%    2.079      2 Template:VersionMinus
+ 10.43%    1.883      1 Template:Button
+  9.25%    1.671      7 Template:Incode
+  8.43%    1.522      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112173807 and revision id 1737600. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112174956 and revision id 1737612. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
