--- a/wiki/bg/User_hub.html
+++ b/wiki/bg/User_hub.html
@@ -66,8 +66,9 @@
 <p><span id="Workbenches"></span>
 </p>
 <h3><span id=".D0.A0.D0.B0.D0.B1.D0.BE.D1.82.D0.BD.D0.B8_.D0.BC.D0.B0.D1.81.D0.B8"></span><span class="mw-headline" id="&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;_&#1084;&#1072;&#1089;&#1080;">&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;</span></h3>
-<p>&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;&#1090;&#1077; &#1084;&#1072;&#1089;&#1080; (<a href="../Workbenches.html" title="Workbenches">Workbenches</a>) &#1089;&#1072; &#1082;&#1086;&#1083;&#1077;&#1082;&#1094;&#1080;&#1080; &#1086;&#1090; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1079;&#1072; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1080; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080;. &#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;&#1090;&#1077; &#1084;&#1072;&#1089;&#1080;, &#1080;&#1079;&#1073;&#1088;&#1086;&#1077;&#1085;&#1080; &#1087;&#1086;-&#1076;&#1086;&#1083;&#1091;, &#1089;&#1072; &#1074; &#1082;&#1086;&#1084;&#1087;&#1083;&#1077;&#1082;&#1090; &#1089; &#1074;&#1089;&#1103;&#1082;&#1072; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; FreeCAD.
-</p><p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: &#1053;&#1103;&#1082;&#1086;&#1080; &#1088;&#1103;&#1076;&#1082;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; &#1089;&#1072; &#1076;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1085;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;. &#1058;&#1077; &#1089;&#1072; &#1084;&#1072;&#1088;&#1082;&#1080;&#1088;&#1072;&#1085;&#1080; &#1089; <code>D</code> &#1087;&#1086;-&#1076;&#1086;&#1083;&#1091;. &#1053;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1085;&#1072; &#1086;&#1090; <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. &#1053;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1090;&#1077; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; &#1074;&#1089;&#1077; &#1086;&#1097;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1085;&#1080; &#1095;&#1088;&#1077;&#1079; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; &#1085;&#1072; <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
+<pre>(<a href="../bg/Workbenches.html" title="Workbenches/bg">&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;&#1090;&#1077; &#1084;&#1072;&#1089;&#1080;</a>) &#1089;&#1072; &#1082;&#1086;&#1083;&#1077;&#1082;&#1094;&#1080;&#1080; &#1086;&#1090; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1079;&#1072; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1080; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080;. &#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080;&#1090;&#1077; &#1084;&#1072;&#1089;&#1080;, &#1080;&#1079;&#1073;&#1088;&#1086;&#1077;&#1085;&#1080; &#1087;&#1086;-&#1076;&#1086;&#1083;&#1091;, &#1089;&#1072; &#1074; &#1082;&#1086;&#1084;&#1087;&#1083;&#1077;&#1082;&#1090; &#1089; &#1074;&#1089;&#1103;&#1082;&#1072; &#1080;&#1085;&#1089;&#1090;&#1072;&#1083;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; FreeCAD.
+</pre>
+<p><span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span>: &#1053;&#1103;&#1082;&#1086;&#1080; &#1088;&#1103;&#1076;&#1082;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; &#1089;&#1072; &#1076;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1085;&#1080; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;. &#1058;&#1077; &#1089;&#1072; &#1084;&#1072;&#1088;&#1082;&#1080;&#1088;&#1072;&#1085;&#1080; &#1089; <code>D</code> &#1087;&#1086;-&#1076;&#1086;&#1083;&#1091;. &#1053;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072; &#1084;&#1072;&#1089;&#1072; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1085;&#1072; &#1086;&#1090; <a href="../Preferences_Editor.html#Workbenches" title="Preferences Editor">preferences</a>. &#1053;&#1077;&#1072;&#1082;&#1090;&#1080;&#1074;&#1085;&#1080;&#1090;&#1077; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; &#1074;&#1089;&#1077; &#1086;&#1097;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1072;&#1082;&#1090;&#1080;&#1074;&#1080;&#1088;&#1072;&#1085;&#1080; &#1095;&#1088;&#1077;&#1079; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=List-add.svg&amp;filetimestamp=20240522171753&amp;.html" class="mw-file-description"><img src="../File/List-add.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> &#1084;&#1077;&#1085;&#1102;&#1090;&#1086; &#1085;&#1072; <a href="../Std_Workbench.html" title="Std Workbench">TabBar Workbench selector</a>.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <a href="../Std_Base.html" title="Std Base">Standard tools</a>. &#1058;&#1077;&#1079;&#1080; &#1082;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080; &#1080; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080; &#1087;&#1088;&#1080;&#1089;&#1098;&#1089;&#1090;&#1074;&#1072;&#1090; &#1074;&#1098;&#1074; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> &#1079;&#1072; &#1080;&#1079;&#1075;&#1088;&#1072;&#1078;&#1076;&#1072;&#1085;&#1077; &#1080; &#1088;&#1077;&#1096;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1084;&#1077;&#1093;&#1072;&#1085;&#1080;&#1095;&#1085;&#1080; &#1089;&#1075;&#1083;&#1086;&#1073;&#1082;&#1080;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -135,12 +136,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112174956
+Cached time: 20260112175231
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.163 seconds
+CPU time usage: 0.124 seconds
+Real time usage: 0.233 seconds
 Preprocessor visited node count: 293/1000000
 Post&#8208;expand include size: 6635/2097152 bytes
 Template argument size: 2013/2097152 bytes
@@ -151,17 +152,17 @@ Unstrip post&#8208;expand size: 4273/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.060      1 -total
- 38.93%    7.030      1 Template:Userdocnavi/bg
- 15.59%    2.816      3 Template:Version
- 12.50%    2.258      1 Template:Navigation_menu_2
- 11.51%    2.079      2 Template:VersionMinus
- 10.43%    1.883      1 Template:Button
-  9.25%    1.671      7 Template:Incode
-  8.43%    1.522      1 Template:TOCright
+100.00%   22.438      1 -total
+ 34.25%    7.684      1 Template:Userdocnavi/bg
+ 16.01%    3.593      1 Template:Navigation_menu_2
+ 15.74%    3.532      1 Template:Button
+ 11.33%    2.543      2 Template:VersionMinus
+ 11.09%    2.489      7 Template:Incode
+ 10.37%    2.328      3 Template:Version
+ 10.28%    2.306      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112174956 and revision id 1737612. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77148-0!canonical and timestamp 20260112175231 and revision id 1737614. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
